cat_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cat
  template:
    metadata:
      labels:
        app: cat
    spec:
      containers:
      - name: cat
        image: LOCATION-docker.pkg.dev/PROJECT_ID/REPOSITORY/IMAGE_CAT:TAG
        # This app listens on port 8080 for web traffic by default
        ports:
        - containerPort: 8080
