deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-gke
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-app
        image: us-central1-docker.pkg.dev/bootstrap-73bc/hello-repo/helloworld-gke:latest
        # This app listens on port 8080 for web traffic by default
        ports:
        - containerPort: 8080
